# jotpad

./: .gitignore  Dockerfile  Dockerfile.nginx  README.md  docker-compose.yml  pyproject.toml
pad/: manage.py
pad/api/: models.py  serializer.py  urls.py  views.py
pad/api/migrations/: 0001_initial.py
pad/api/static/api/: main.css
pad/api/templates/: home.html
pad/data/nginx/: nginx.conf
pad/jotpad/: asgi.py  settings.py  urls.py  wsgi.py
pad/jotpad/settings/: app_logger.py  base.py  dev.py  prod.py
pad/templates/: base.html
